<resources>
    <string name="app_name">B5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    <string name="sixth">Sixth</string>
    <string name="seventh">Seventh</string>
    <string name="eighth">Eighth</string>
    <string name="ninth">Ninth</string>
    <string name="tenth">Tenth</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="generate_avatar">Generate avatar</string>
    <string name="create_profile">Create profile</string>
    <string name="update_profile">Update profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="create_account">Create account</string>
</resources>